# MobileFineTuner

./: .gitignore  LICENSE  README.md
gpt2_full_finetune/: README.md  main.cpp
gpt2_lora_finetune/: README.md  eval_mmlu.cpp  eval_ppl.cpp  main.cpp
gpt2_lora_finetune/mmlu/: mmlu_runner.cpp  mmlu_runner.h
operators/: CMakeLists.txt
operators/finetune_ops/core/: autograd_engine.cpp  autograd_engine.h  backward_functions.cpp  backward_functions.h  device.h  dtype.h  lm_loss.cpp  lm_loss.h  logger.cpp  logger.h  memory_efficient_attention.cpp  memory_efficient_attention.h  memory_manager.cpp  memory_manager.h  ops.cpp  ops.h  performance_monitor.cpp  performance_monitor.h  step_arena.cpp  step_arena.h  tensor.cpp  tensor.h  test_lm_loss.cpp  test_tokenizer_bpe.cpp  test_tokenizer_gemma.cpp  tokenizer.cpp  tokenizer.h  tokenizer_bpe.cpp  tokenizer_bpe.h  tokenizer_gemma.cpp  tokenizer_gemma.h  utils.cpp  utils.h
operators/finetune_ops/data/: test_wikitext2_dataset.cpp  wikitext2_dataset.cpp  wikitext2_dataset.h
operators/finetune_ops/functional/: functional.h
operators/finetune_ops/graph/: CMakeLists.txt  gemma_lora_injector.cpp  gemma_lora_injector.h  gemma_model.cpp  gemma_model.h  gpt2_model.cpp  gpt2_model.h  layer0_activations.json  lora_injector.cpp  lora_injector.h  lora_saver.cpp  lora_saver.h  pt_last_logits.json  safetensors_loader.cpp  safetensors_loader.h  save_pt_gold.py  test_attention_matmul.cpp  test_debug_layer0.cpp  test_gemma_config.cpp  test_gemma_forward.cpp  test_gpt2_forward.cpp  test_lora_correctness.cpp  test_lora_roundtrip.cpp  test_matmul_debug.cpp  test_safetensors_loader.cpp  test_safetensors_simple  test_safetensors_simple.cpp
operators/finetune_ops/legacy/: README.md  gpt2_finetune_model.h
operators/finetune_ops/legacy/nn/: attention.cpp  attention.h  layers.h  lora.cpp  lora.h  lora_ops.cpp  lora_ops.h  mlp.cpp  mlp.h  module.h
operators/finetune_ops/memory/: arena_allocator.h
operators/finetune_ops/model/: model_loader.h
operators/finetune_ops/models/: gpt2.h
operators/finetune_ops/nn/: embedding.cpp  embedding.h  lora_linear.cpp  lora_linear.h  test_lora_linear.cpp
operators/finetune_ops/optim/: adam.cpp  adam.h  gemma_trainer.cpp  gemma_trainer.h  lora_optimizer.cpp  lora_optimizer.h  optimizer.cpp  optimizer.h  test_10step_convergence.cpp  test_10step_train.cpp  test_attention_single_layer_backward.cpp  test_backward_sanity.cpp  test_baseline_10step.cpp  test_ce_grad.cpp  test_fixed_batch_compare.cpp  test_lora_grad.cpp  test_optimizer_pipeline.cpp  test_qkt_softmax_grad.cpp  test_repeat_kv_softmax_grad.cpp  test_rmsnorm_unit.cpp  test_simple_grad.cpp  test_train_minimal.cpp  train_lora_gemma.cpp  train_lora_gpt2.cpp  trainer.cpp  trainer.h
operators/finetune_ops/transformer/: autoregressive_ops.cpp  autoregressive_ops.h  gpt2_components.cpp  gpt2_components.h  kv_cache.cpp  kv_cache.h  transformer_block.cpp  transformer_block.h
operators/opt_ops/energy/: power_monitor.cpp  power_monitor.h
operators/opt_ops/sharding/: parameter_sharder.cpp  parameter_sharder.h  test_parameter_sharder.cpp  test_sharder_strict.cpp
pytorch_alignment/: README.md  gemma_lora_finetune.py  gpt2_full_finetune.py  gpt2_lora_finetune.py
scripts/: README.md  pretokenize_wikitext2_gemma.py  train_gemma3_lora_torch.py
scripts/Finetune/: measure_rss.sh  plot_loss_curve.py  run_all_alignment.sh  run_finetune_parallel.sh  run_gemma_1b_lora.sh  run_gemma_1b_short.sh  run_gemma_270m_grad_accum_test.sh  run_gemma_270m_grad_accum_test_v2.sh  run_gpt2_medium_lora.sh  run_pytorch_after_cpp.sh  run_pytorch_alignment.sh  run_sequential_alignment.sh
scripts/benchmark/: energy_benchmark.sh  test_all_models_sharding.sh  test_energy_function.sh  test_gemma_shard.sh  test_shard_optimization.sh  test_sharding_aggressive.sh
